styles/style.css
/* ... */
.custom-prev.inactive,
.custom-next.inactive {
  color: #ccc;
}

.theme-dark .custom-prev.inactive, .theme-dark .custom-next.inactive {
  color: #282828;
}

/*Slider*/
.swiper {
  width: 600px;
  height: 400px;
  margin: auto;
  border-radius: 25px;
  margin-top: 100px;
  z-index: 0;
}

.slider-wrapper {
  width: 600px;
  margin: auto;
}

.swiper-slide {
  text-align: center;
  font-size: 18px;
  background: #f1f1f1;
  display: flex;
  justify-content: center;
  align-items: center;
}

.swiper-slide img {
  display: block;
  width: 100%;
  height: 100%;
  -o-object-fit: cover;
     object-fit: cover;
}

.swiper-buttons {
  width: 100px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.slider-button-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-right: 15px;
  margin-left: 15px;
}

.custom-prev,
.custom-next {
  color: #000;
  cursor: pointer;
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 22px;
}

.swiper-slide-content {
  width: 400px;
  height: 300px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: whitesmoke;
  border-radius: 25px;
}

/* Прогресс-бар */
.swiper-pagination-progressbar.swiper-pagination-horizontal {
  width: 150px;
  height: 5px;
}

.custom-swiper-pagination {
  height: 5px;
  background-color: #e0e0e0;
  border-radius: 2px;
  overflow: hidden;
  position: relative;
}

/* Полоса прогресс-бара */
.swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
  background-color: rgb(146, 252, 207);
}

.theme-dark .swiper-pagination-progressbar {
  background-color: #282828;
}

/* Для центрирования контейнера кнопок и прогресс-бара */
.slider-button-container {
  display: flex;
  margin-right: 15px;
  margin-left: 15px;
}

/*End os slider*/
.wrapper {
  background: var(--color-secondary);
  overflow-x: hidden;
}

/* Переключатель тем */
.switch {
  position: relative;
  display: inline-block;
  width: 25px;
  height: 25px;
}

/* Скрываем стандартный чекбокс */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* Ползунок переключателя */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  transition: 0.3s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 35px;
  width: 35px;
  left: 0px;
  top: 0;
  bottom: 0;
  margin: auto 0;
  transition: 0.3s;
  box-shadow: 0 0px 5px rgba(32, 32, 32, 0.2392156863);
  background: white url(../images/light-icon.svg);
  background-repeat: no-repeat;
  background-position: center;
}

input:checked + .slider:before {
  background: url(../images/night-icon.svg);
  background-repeat: no-repeat;
  background-position: center;
}

.slider.round:before {
  border-radius: 50%;
}

.orb-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.our-team h2 {
  color: var(--font-color);
  margin-top: 125px;
  margin-bottom: 40px;
  font-size: 60px;
  font-weight: normal;
}
.our-team-container{
  display: flex;
  justify-content: space-between;
  margin-bottom: 40px;
}
.our-team-container .our-team-card{
  width: 400px;
  height: 600px;
  background-color: #f1f1f1;
  border-radius: 25px;
  transition: .2s ease-in-out;
}
.our-team-image{
  width: 400px;
  height: 450px;
  border-radius: 25px;
}
.our-team-info h5{
  font-size: 16px;
  text-align: center;
  margin-bottom: 20px;
}

.our-team-info p{
  font-size: 16px;
  text-align: center;
  color: #757575;
}
.theme-dark .our-team-card{
  background-color: #282828;;
}
.theme-dark .our-team-card h5{
  color: #fff;
}



/* Стили для модального окна */
.modal {
  display: none; /* Скрыто по умолчанию */
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  justify-content: center;  /* Центрирование по горизонтали */
  align-items: center;      /* Центрирование по вертикали */
}

.modal-content {
  background-color: #fff;
  padding: 30px;
  width: 750px;
  height: 750px;
  box-sizing: border-box;
  position: relative;
  border-radius: 25px;

}

.close {
  color: #aaa;
  position: absolute;
  top: 10px;
  right: 20px;
  font-size: 36px;
  font-weight: bold;
  transition: .3s;
}

.close:hover,
.close:focus {
  color: rgb(146, 252, 207);
  text-decoration: none;
  cursor: pointer;
}

.theme-dark .modal-content{
  background-color: rgb(20, 20, 20);
}
.consultation-form{
  display: flex;
  flex-direction: column;
  gap: 40px;
}
.theme-dark .consultation-form input{
  appearance: none;  
  outline: none;
  border: 1px solid rgb(36, 36, 36);
  border-radius: 5px;
  background-color: rgb(36, 36, 36);
  height: 50px;
  width: 400px;
  padding: 20px;
  color: rgba(255, 255, 255, 0.60);
  font-size: 14px;
  transition: .3s ease-in-out;
}
.theme-dark .consultation-form textarea{
  appearance: none;  
  outline: none;
  border: 1px solid rgb(36, 36, 36);
  border-radius: 5px;
  background-color: rgb(36, 36, 36);
  height: 140px;
  width: 450px;
  padding: 20px;
  color: rgba(255, 255, 255, 0.60);
  font-size: 14px;
  transition: .3s ease-in-out;
}
.theme-dark .consultation-form textarea:focus{
  color: #fff;
  border: 1px solid rgb(146, 252, 207);
}
.theme-dark .consultation-form input:focus{
  color: #fff;
  border: 1px solid rgb(146, 252, 207);
  font-weight: 500;
}
.theme-dark .submit-button{
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 20px;
  border: 1.5px solid rgb(146, 252, 207);
  font-size: 18px;
  background-color: rgb(146, 252, 207);
  width: 265px;
  height: 36px;
  padding-left: 10px;
  cursor: pointer;
}
.consultation-form{
  margin-top: 40px;
}
.theme-dark .modal-content h2{
  color: #fff;
}
/* ... */

